form half afgemaakt

--- a/templates/serie/index.html.twig
+++ b/templates/serie/index.html.twig
@@ -32,7 +32,7 @@
 
             </div>
 {#<a class="btn btn-danger" href="{{ path('home') }}">Back</a>#}
-{#            <a href="{{ path('insert', {id: genre.id}) }}" class="btn btn-primary">new Ganre</a>#}
+{#            <a href="{{ path('insert') }}" class="btn btn-primary">new Ganre</a>#}
         </div>
     </div>
 
