--- a/templates/serie/episode.html.twig
+++ b/templates/serie/episode.html.twig
@@ -29,9 +29,9 @@
                     {% endfor %}
                     </tbody>
                 </table>
-
+                <a class="btn btn-danger" href="{{ path('home') }}">Back</a>
             </div>
-            <a class="btn btn-danger" href="{{ path('home') }}">Back</a>
+{#            <a class="btn btn-danger" href="{{ path('home') }}">Back</a>#}
             {#            <a href="{{ path('insert', {id: genre.id}) }}" class="btn btn-primary">new Ganre</a>#}
         </div>
     </div>
